# stocks

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: code-validation.yml  dependabot-auto-merge.yml  packages-validation.yml  release.yml  upload-binaries.yml
configs/git/: setup.sh
configs/git/hooks/: pre-commit  pre-push
configs/scripts/: cargo-msrv.sh
modules/common/: Cargo.toml  README.md
modules/common/src/: error.rs  lib.rs  stock.rs  utils.rs
modules/quote-client/: Cargo.toml  README.md
modules/quote-client/src/: configs.rs  main.rs
modules/quote-server/: Cargo.toml  README.md
modules/quote-server/src/: configs.rs  main.rs  quote.rs
