[package]
name = "quote-client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
common = { path = "../common" }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

#[lints.rust]
## rustc (builtin) lints
#unused_lifetimes = "warn"
#missing_docs = "warn"
#single_use_lifetimes = "warn"
#unreachable_pub = "warn"
#rust_2018_idioms = { level = "warn", priority = -2 }
#unexpected_cfgs = { level = "warn", check-cfg = [
#    "cfg(coverage)",
#    "cfg(never)",
#] }
#
#[lints.clippy]
## individual Clippy lints
#uninlined_format_args = "warn"
### nightly only: doc_link_code = "allow"
#use_self = "warn"
#must_use_candidate = "warn"
#unwrap_used = "warn"
#panic_in_result_fn = "warn"
#
## Clippy lint groups
#pedantic = { level = "warn", priority = -2 }
#perf = { level = "warn", priority = -6 }
#style = { level = "warn", priority = -4 }
#complexity = { level = "warn", priority = -5 }
#correctness = { level = "warn", priority = -3 }
#nursery = { level = "warn", priority = -7 }
#
## cargo-specific groups
#cargo = { level = "warn", priority = -8 }
#cargo_common_metadata = { level = "warn", priority = -9 }