[package]
name = "quote-client"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
common = { path = "../common" }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
signal-hook.workspace = true

[lints]
workspace = true