[package]
name = "quote-server"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.9"
tracing.workspace = true
tracing-subscriber.workspace = true
common = { path = "../common" }
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true