[package]
name = "quote-server"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rand = "0.9"
tracing.workspace = true
tracing-subscriber.workspace = true
common = { path = "../common" }
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true